# st-rag

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
app/: config.py  contracts.py  main.py
app/clients/: openai_client.py  pinecone_client.py
app/db/: engine.py  models.py
app/routers/: chat.py  files.py  health.py  sessions.py
app/services/: chunking.py  generation.py  ids.py  ingestion.py  naming.py  parsing.py  retrieval.py  validation.py
frontend/: api.py  pages_chat.py  pages_upload.py  streamlit_app.py
scripts/: backfill_sparse.py  init_db.py  init_index.py  probe_inference.py
tests/: conftest.py  test_chat_router.py  test_chunking.py  test_clients.py  test_config.py  test_contracts.py  test_db.py  test_files_router.py  test_frontend_api.py  test_generation.py  test_health.py  test_ids.py  test_ingestion.py  test_naming.py  test_openai_client.py  test_parsing.py  test_pinecone_client.py  test_pinecone_hybrid.py  test_retrieval.py  test_sessions_router.py  test_validation.py
