[project]
name = "rag-agent"
version = "0.1.0"
description = "Single-user Retrieval-Augmented Generation web app"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.34.*",
    "streamlit>=1.40",
    "st-click-detector>=0.1.3",
    "markdown>=3.10",
    "pydantic>=2,<3",
    "pydantic-settings>=2",
    "openai>=2.41,<3",
    "pinecone>=9.1,<10",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "tiktoken>=0.8",
    "langchain-text-splitters>=0.3",
    "pymupdf4llm==1.27.2.3",
]
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
[tool.ruff.lint.isort]
known-first-party = ["app"]
[tool.pytest.ini_options]
testpaths = ["tests"]
